; ModuleID = '/home/carl/AnghaBench/systemd/src/coredump/extr_coredumpctl.c_print_entry.c'
source_filename = "/home/carl/AnghaBench/systemd/src/coredump/extr_coredumpctl.c_print_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@arg_field = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @print_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @print_entry(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @assert(i32* %8)
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i32, i32* @stdout, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @print_info(i32 %13, i32* %14, i32 %15)
  store i32 %16, i32* %4, align 4
  br label %29

17:                                               ; preds = %3
  %18 = load i64, i64* @arg_field, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %17
  %21 = load i32, i32* @stdout, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @print_field(i32 %21, i32* %22)
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %17
  %25 = load i32, i32* @stdout, align 4
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @print_list(i32 %25, i32* %26, i32 %27)
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %24, %20, %12
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @print_info(i32, i32*, i32) #1

declare dso_local i32 @print_field(i32, i32*) #1

declare dso_local i32 @print_list(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
